Add Node Metrics and total metrics